# RAnT

./: .gitignore  .gitmodules  Cargo.toml  README.md  README.org
.github/workflows/: test.yaml
benches/: cycle_benchmark.rs
examples/: build_AnT.sh
examples/differential/exponential/: Cargo.toml  orbits.tnar
examples/differential/exponential/src/: main.rs
examples/logistic/: Cargo.toml  period.tnar
examples/logistic/ant/periods/: periods.ant
examples/logistic/ant/test_data/: .gitignore  config.ant  period.tna
examples/logistic/src/: main.rs  test.rs
examples/mandelbrot/: .gitignore  Cargo.toml
examples/mandelbrot/benches/: scan_benchmark.rs
examples/mandelbrot/src/: complex.rs  lib.rs  main.rs  test.rs
src/: lib.rs  main.rs
src/output/: text.rs
src/scan/: mod.rs  one.rs  points.rs
src/scan/adapters/: mod.rs
src/scan/generators/: mod.rs
src/simulate/: mod.rs  test.rs
src/simulate/condition/: mod.rs
src/simulate/one/: mod.rs
src/simulate/period/: mod.rs
src/util/: mod.rs  tna.rs
