workspace = { members = ["examples/logistic", "examples/mandelbrot", "examples/differential/exponential"] }

[package]
name = "rant"
version = "0.1.0"
description = "Analysis Tool for Non-linear Dynamical Systems written in Rust"
repository = "https://github.com/cloudsftp/RAnT"

edition = "2021"
license = "GPLv3"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.82"
rayon = "1.10.0"
thiserror = "1.0.59"

[dev-dependencies]
criterion = { version = "0.4", features = ["html_reports"] }

[[bench]]
name = "cycle_benchmark"
harness = false
