[package]
name = "mandelbrot"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
criterion = "0.5.1"
crossbeam-channel = "0.5.13"
plotters = "0.3.6"
rantlib = { path="../.." }
rayon = "1.10.0"

[[bench]]
name="scan_benchmark"
harness=false
